# TourneySim

./: CMakeLists.txt  README.md  defs.h  formulas.c  main.c  makefile  misc.c  players.txt  tourney.c
CMake/: CMakeCache.txt  Makefile  cmake_install.cmake
Source/: defs.h  formulas.c  players.txt
TourneySim_CodeBlocks/: TourneySim_CodeBlocks.cbp  TourneySim_CodeBlocks.depend  TourneySim_CodeBlocks.layout
